--- a/wordle.html
+++ b/wordle.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Wordle Clone</title>
     <link rel="stylesheet" href="styles.css">
 
 </head>
 <body>
+<div class="container">
     <h1 id="title">Retiree Crack-Cocaine</h1>
     <hr>
     <br>
@@ -15,8 +16,12 @@
     </div>
 
     <br>
+
+    <div id="reload_button"></div>
     <h1 id="answer"></h1>
 
+
+</div>
 </body>
 <script src="wordle.js"></script>
 </html>
