--- a/wordle.html
+++ b/wordle.html
@@ -2,11 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wordle Clone</title>
-    <link rel="stylesheet" href="styles.css">
+
+    <link rel="stylesheet" href="static/css/wordle.css">
 
 </head>
 <body>
+
 <div class="container">
     <h1 id="title">Retiree Crack-Cocaine</h1>
     <hr>
@@ -23,5 +26,5 @@
 
 </div>
 </body>
-<script src="wordle.js"></script>
+<script src="static/js/wordle.js"></script>
 </html>
