--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <div class="container">
-    <h1 id="title">Retiree Crack-Cocaine</h1>
+    <h1 id="title">Wordle Clone</h1>
     <hr>
     <br>
     <div id="board">
