fix static imports

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wordle Clone</title>
 
-    <link rel="stylesheet" href="static/css/wordle.css">
+    <link rel="stylesheet" href="wordle.css">
 
 </head>
 <body>
@@ -26,5 +26,5 @@
 
 </div>
 </body>
-<script src="static/js/wordle.js"></script>
+<script src="wordle.js"></script>
 </html>
