--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wordle Clone</title>
 
-    <link rel="stylesheet" href="wordle.css">
+    <link rel="stylesheet" href="styles.css">
 
 </head>
 <body>
